k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: edashboard
  labels:
    name: edashboard
